<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2A2A2A"
    tools:context=".MainActivity">


    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:clickable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gpio_2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="24dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:text="@string/gpio_2_1"
            android:textColor="#FAFAFA" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gpio_2_0"
            android:layout_width="wrap_content"
            app:cornerRadius="24dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:text="@string/gpio_2_0"
            android:textColor="#FAFAFA" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_inner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gpio_0_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cornerRadius="24dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:text="@string/gpio_0_1"
            android:textColor="#FFFFFF" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gpio_0_0"
            android:layout_width="0dp"
            app:cornerRadius="24dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:text="@string/gpio_0_0"
            android:textColor="#FAFAFA"
            tools:ignore="DuplicateSpeakableTextCheck" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gpio_4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            app:cornerRadius="24dp"
            android:text="@string/gpio_4_1"
            android:textColor="#FAFAFA" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gpio_4_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cornerRadius="24dp"
            android:layout_weight="1"
            android:text="@string/gpio_4_0"
            android:textColor="#FAFAFA" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gpio_5_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            app:cornerRadius="24dp"
            android:text="GPIO 5 1 D1 ON"
            android:textColor="#FAFAFA" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gpio_5_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cornerRadius="24dp"
            android:layout_weight="1"
            android:text="GPIO 5 0 D1 OFF"
            android:textColor="#FAFAFA" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gpio_16_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            app:cornerRadius="24dp"
            android:text="GPIO 16 1 D0 ON"
            android:textColor="#FAFAFA" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gpio_16_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cornerRadius="24dp"
            android:layout_weight="1"
            android:text="GPIO 16 0 D0 OFF"
            android:textColor="#FAFAFA" />


    </LinearLayout>

</LinearLayout>
